tests/compile-fail/fail_attribute_test.si
// Test that the #[fail] attribute works correctly
// Spec: 13-testing.md ยง fail Attribute
// Design: 11-testing/02-test-syntax.md ยง Expected Failure Tests
//
// The #[fail] attribute marks tests expected to fail at runtime.
// This file tests that the test runner correctly handles #[fail].

// This test should PASS because it expects a runtime failure
// and the assertion will fail (1 != 2)
// TODO: Fix assert_eq to use .actual/.expected not .left/.right
// #[fail("assertion failed")]
// @test_expected_assertion_failure () -> void = run(
//     assert_eq(.left: 1, .right: 2),
//     ()
// )
